tests/globals/valid/global_not_initialized.amu
foo:s32;

main :: () -> s32 {
    for (i:s32 = 0; i < 3; i = i + 1)
        foo = foo + 1;
    return foo;
}