tests/globals/invalid/non_constant_init.amu
foo:s32 = 3;
bar:s32 = foo + 1;

main() : s32 {
    return bar;
}